更改豬的圖片

--- a/PiggyPatchwork/PhotoMovie.storyboard
+++ b/PiggyPatchwork/PhotoMovie.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="90" width="414" height="726"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="piggy_studio" translatesAutoresizingMaskIntoConstraints="NO" id="BAq-3N-SGY">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pig_studio" translatesAutoresizingMaskIntoConstraints="NO" id="BAq-3N-SGY">
                                 <rect key="frame" x="0.0" y="455" width="414" height="361"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="BAq-3N-SGY" secondAttribute="height" multiplier="414:361" id="RKz-b9-zhz"/>
@@ -80,7 +80,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="點一下按鈕                               選取欲製成影片的照片哦！" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cpD-tm-znX">
-                                <rect key="frame" x="99.666666666666686" y="627.66666666666663" width="207" height="108.33333333333337"/>
+                                <rect key="frame" x="124.33333333333333" y="678.66666666666663" width="165.33333333333337" height="72.333333333333371"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -90,7 +90,7 @@
                         <constraints>
                             <constraint firstItem="MxZ-Vz-Y29" firstAttribute="height" secondItem="EXP-SL-jDg" secondAttribute="height" multiplier="60: 896" id="4Kc-dT-zZv"/>
                             <constraint firstItem="WRd-Db-W2R" firstAttribute="trailing" secondItem="Ai8-mt-WjQ" secondAttribute="trailing" id="6to-wK-nw7"/>
-                            <constraint firstItem="MxZ-Vz-Y29" firstAttribute="top" secondItem="cpD-tm-znX" secondAttribute="bottom" id="D0M-9z-vCp"/>
+                            <constraint firstItem="MxZ-Vz-Y29" firstAttribute="top" secondItem="cpD-tm-znX" secondAttribute="bottom" multiplier="0.98:1" id="D0M-9z-vCp"/>
                             <constraint firstAttribute="bottom" secondItem="V95-T0-HSu" secondAttribute="bottom" id="EJb-lc-VY2"/>
                             <constraint firstItem="FYV-L5-zNa" firstAttribute="top" secondItem="MxZ-Vz-Y29" secondAttribute="bottom" id="KJH-Cr-9QR"/>
                             <constraint firstItem="Ai8-mt-WjQ" firstAttribute="top" secondItem="HJi-eG-0eB" secondAttribute="bottom" constant="16" id="Lwp-bc-RV6"/>
@@ -99,11 +99,11 @@
                             <constraint firstItem="Ai8-mt-WjQ" firstAttribute="leading" secondItem="WRd-Db-W2R" secondAttribute="leading" id="QJI-2s-Zxp"/>
                             <constraint firstItem="mOy-tD-sid" firstAttribute="leading" secondItem="WRd-Db-W2R" secondAttribute="leading" constant="16" id="SRS-nh-v1M"/>
                             <constraint firstItem="V95-T0-HSu" firstAttribute="top" secondItem="Ai8-mt-WjQ" secondAttribute="bottom" id="X3P-zw-7jG"/>
-                            <constraint firstItem="cpD-tm-znX" firstAttribute="width" secondItem="BAq-3N-SGY" secondAttribute="width" multiplier="1:2" id="ahF-SH-42K"/>
-                            <constraint firstItem="cpD-tm-znX" firstAttribute="centerX" secondItem="WRd-Db-W2R" secondAttribute="centerX" constant="-4" id="cNz-lN-XXm"/>
+                            <constraint firstItem="cpD-tm-znX" firstAttribute="width" secondItem="BAq-3N-SGY" secondAttribute="width" multiplier="1:2.5" id="ahF-SH-42K"/>
+                            <constraint firstItem="cpD-tm-znX" firstAttribute="centerX" secondItem="WRd-Db-W2R" secondAttribute="centerX" id="cNz-lN-XXm"/>
                             <constraint firstItem="WRd-Db-W2R" firstAttribute="trailing" secondItem="HJi-eG-0eB" secondAttribute="trailing" constant="16" id="hs4-rb-mgB"/>
                             <constraint firstItem="HJi-eG-0eB" firstAttribute="centerY" secondItem="mOy-tD-sid" secondAttribute="centerY" id="ivw-hQ-Wzj"/>
-                            <constraint firstItem="cpD-tm-znX" firstAttribute="height" secondItem="BAq-3N-SGY" secondAttribute="height" multiplier="1.5:5" id="kaw-ZN-Lje"/>
+                            <constraint firstItem="cpD-tm-znX" firstAttribute="height" secondItem="BAq-3N-SGY" secondAttribute="height" multiplier="1:5" id="kaw-ZN-Lje"/>
                             <constraint firstItem="mOy-tD-sid" firstAttribute="top" secondItem="WRd-Db-W2R" secondAttribute="top" constant="8" id="la8-rl-Ydv"/>
                             <constraint firstItem="V95-T0-HSu" firstAttribute="height" secondItem="EXP-SL-jDg" secondAttribute="height" multiplier="80/896" id="nIZ-cG-t5Z"/>
                             <constraint firstItem="BAq-3N-SGY" firstAttribute="width" secondItem="WRd-Db-W2R" secondAttribute="width" id="pKT-uo-hib"/>
@@ -312,7 +312,7 @@
         <image name="film_view" width="414" height="306"/>
         <image name="next_icon_left" width="4" height="6"/>
         <image name="next_icon_right" width="4" height="6"/>
-        <image name="piggy_studio" width="414" height="361"/>
+        <image name="pig_studio" width="414" height="361"/>
         <image name="plus" width="256" height="256"/>
         <image name="share" width="256" height="252"/>
     </resources>
