--- a/PiggyPatchwork/Lobby.storyboard
+++ b/PiggyPatchwork/Lobby.storyboard
@@ -152,7 +152,7 @@
                                 <rect key="frame" x="75" y="788" width="264" height="51"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="cute_pig" translatesAutoresizingMaskIntoConstraints="NO" id="9iU-8H-YRh">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lobbyPig" translatesAutoresizingMaskIntoConstraints="NO" id="9iU-8H-YRh">
                                 <rect key="frame" x="69" y="88.5" width="276" height="276"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="9iU-8H-YRh" secondAttribute="height" id="gvw-EP-nDY"/>
@@ -249,7 +249,7 @@
     </scenes>
     <resources>
         <image name="collage" width="256" height="256"/>
-        <image name="cute_pig" width="393" height="367"/>
+        <image name="lobbyPig" width="800" height="800"/>
         <image name="myAlbum" width="256" height="187"/>
         <image name="photography" width="190" height="255.5"/>
     </resources>
