refactor: 更改 CustomColor 寫法＆更改儲存影片背後的 View 為半透明白色讓動畫更清楚

--- a/PiggyPatchwork/Pravicy.storyboard
+++ b/PiggyPatchwork/Pravicy.storyboard
@@ -27,14 +27,14 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EDJ-Z3-z9s">
                                 <rect key="frame" x="363" y="44" width="31" height="30"/>
                                 <state key="normal" title="關閉">
-                                    <color key="titleColor" systemColor="systemBlueColor" red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="backToHomePage:" destination="sBu-rA-tBZ" eventType="touchUpInside" id="Lgu-qu-95o"/>
                                 </connections>
                             </button>
-                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="OHv-kw-Uv9">
-                                <rect key="frame" x="188.5" y="453.5" width="37" height="37"/>
+                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="OHv-kw-Uv9">
+                                <rect key="frame" x="197" y="462" width="20" height="20"/>
                             </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -57,7 +57,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L0j-AJ-1Eo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-49" y="163"/>
+            <point key="canvasLocation" x="-49.275362318840585" y="162.72321428571428"/>
         </scene>
     </scenes>
 </document>
