--- a/PiggyPatchwork/Lobby.storyboard
+++ b/PiggyPatchwork/Lobby.storyboard
@@ -119,7 +119,7 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="myAlbum" translatesAutoresizingMaskIntoConstraints="NO" id="tcA-F7-7JM">
-                                        <rect key="frame" x="30" y="27.5" width="20" height="20.000000000000028"/>
+                                        <rect key="frame" x="30" y="27.5" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="tcA-F7-7JM" secondAttribute="height" id="ULz-ye-wLH"/>
                                             <constraint firstAttribute="width" constant="20" id="xWG-ct-hMS"/>
